Se agregan margenes al tag

--- a/css/my.css
+++ b/css/my.css
@@ -1,13 +1,3 @@
-/* .imagen{ */
-    /* position: relative; */
-    /* left:0px; */
-    /* bottom: 0px; */
-/* } */
-
-/* .tag:not(body).mio{ */
-    /* background-color: blue; */
-/* } */
-
-/* .navbar{ */
-    /* opacity: 0.9; */
-/* } */
+.tag:not(body){
+    margin-top: 5px;
+}
